--- a/Vishop/Views/Customer/allCustomers.cshtml
+++ b/Vishop/Views/Customer/allCustomers.cshtml
@@ -9,13 +9,21 @@
     <text>No customers yet.</text>
 } else
 {
-    <table class="table table-striped 	  table-­bordered	  table‐hover">
-        <thead><tr><th>Customer Name</th></tr></thead>
+    <table class="table table-striped table-­bordered table‐hover">
+        <thead>
+        <tr>
+            <th>Customer Name</th>
+            <th>Membership name</th>
+        </tr>
+        </thead>
         <tbody>
             @foreach(var customer in Model.Customer)
             {
 
-                               <tr><td>@Html.ActionLink(@customer.name, "Details", "Customer", new { id = customer.id }, null);</td></tr>
+                <tr>
+                    <td>@Html.ActionLink(@customer.name, "Details", "Customer", new { id = customer.id }, null)</td>
+                    <td>@customer.membershipType.name</td>
+            </tr>
             }
         </tbody>
     </table>
