--- a/Vishop/Views/Customer/CustomerForm.cshtml
+++ b/Vishop/Views/Customer/CustomerForm.cshtml
@@ -8,25 +8,36 @@
 <h2>New Customer</h2>
 @using(Html.BeginForm("Save", "Customer"))
 {
+    @Html.ValidationSummary()
     <div class="form-group">
-        @Html.LabelFor(m => m.Customer.name)
-        @Html.TextBoxFor(m => m.Customer.name, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Customer.Name)
+        @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Name)
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Customer.birthdate)
-        @Html.TextBoxFor(m => m.Customer.birthdate, "{0: d MMM yyyy}",new { @class = "form-control" })
+        @Html.LabelFor(m => m.Customer.Birthdate)
+        @Html.TextBoxFor(m => m.Customer.Birthdate, "{0: d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Birthdate)
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Customer.membershipTypeId)
-        @Html.DropDownListFor(m => m.Customer.membershipTypeId, 
-       new SelectList(Model.MembershipType, "Id", "Name"), "Select Membership Type", 
+        @Html.LabelFor(m => m.Customer.MembershipTypeId)
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId,
+       new SelectList(Model.MembershipType, "Id", "Name"), "Select Membership Type",
        new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
+
     </div>
     <div class="checkbox">
         <label>
-            @Html.CheckBoxFor(m => m.Customer.isSubscribedToNewsletter) Subscribed for Newsletter
+            @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter) Subscrib for Newsletter
         </label>
     </div>
-    @Html.HiddenFor(m => m.Customer.id)
+    @Html.HiddenFor(m => m.Customer.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
+}
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
