--- a/Vishop/Views/Customer/allCustomers.cshtml
+++ b/Vishop/Views/Customer/allCustomers.cshtml
@@ -9,6 +9,7 @@
     <text>No customers yet.</text>
 } else
 {
+    @Html.ActionLink("Add new customer","New","Customer",new { }, new { @class="btn btn-primary"})
     <table class="table table-striped table-­bordered table‐hover">
         <thead>
         <tr>
@@ -21,9 +22,9 @@
             {
 
                 <tr>
-                    <td>@Html.ActionLink(customer.name, "Edit", "Customer", 
-                            new { id = customer.id }, null)</td>
-                    <td>@customer.membershipType.name</td>
+                    <td>@Html.ActionLink(customer.Name, "Edit", "Customer",
+                            new { id = customer.Id }, null)</td>
+                    <td>@customer.MembershipType.Name</td>
             </tr>
             }
         </tbody>
