--- a/Vishop/Views/Movie/allMovies.cshtml
+++ b/Vishop/Views/Movie/allMovies.cshtml
@@ -12,7 +12,7 @@
     <text>No movies yet.</text>
 } else
 {
-    @Html.ActionLink("Add new","New","Movie",new { },new { @class="btn btn-primary"})
+    @Html.ActionLink("Add movie","New","Movie",new { },new { @class="btn btn-primary"})
     <table class="table table-striped table-­bordered table‐hover">
         <thead>
             <tr>
@@ -24,8 +24,8 @@
             @foreach(var movie in Model)
             {
                 <tr>
-                    <td>@Html.ActionLink(movie.name, "Edit", "Movie", new { id = movie.id }, null)</td>
-                    <td>@movie.Genre.name</td>
+                    <td>@Html.ActionLink(movie.Name, "Edit", "Movie", new { id = movie.Id }, null)</td>
+                    <td>@movie.Genre.Name</td>
                 </tr>
             }
             </tbody>
